--- a/style.css
+++ b/style.css
@@ -1,3 +1,120 @@
 body {
   background-color: cornflowerblue;
+  color: white;
+}
+h1 {
+  font-size: 40px;
+}
+h2 {
+  display: flex;
+  justify-content: center;
+}
+
+li{
+  color: black;
+  display: inline-block;
+  width:6em;
+
+}
+#container {
+  width: 90%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+}
+#dateTemplate {
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-top: 2em;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  background-color: #000;
+  border: 1px black solid;
+  color: #FFF;
+  text-align: center;
+}
+#cityTemplate {
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  background-color: white;
+  color: #000;
+  border: 1px black solid;
+  text-align: center;
+}
+#tempTemplate {
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  background-color: white;
+  color: #000;
+  border: 1px black solid;
+  text-align: center;
+}
+#weatherIcon {
+  
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  color: #000;
+  margin-top: 3em;
+  text-align: center;
+}
+#currentTemplate {
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  background-color: white;
+  color: #000;
+  border: 1px black solid;
+  text-align: center;
+}
+#feelsTemplate {
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  background-color: white;
+  color: #000;
+  border: 1px black solid;
+  text-align: center;
+}
+#windTemplate {
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  background-color: white;
+  color: #000;
+  border: 1px black solid;
+  text-align: center;
+}
+#humidTemplate {
+  font-size: 1.50em;
+  height:3em;
+  width: 30%;
+  margin-left:auto;
+  margin-right:auto;
+  vertical-align: center;
+  background-color: white;
+  color: #000;
+  text-align: center;
 }
